1.0.35 - menuButtonPosition support via new menuBarConfig, Fixed height overflow in mobile-menu Added slot system to customize menu-bar faster

--- a/src/styles/components/GameMenu.scss
+++ b/src/styles/components/GameMenu.scss
@@ -49,13 +49,29 @@
     &.Corner_Button {
         position: fixed;
         bottom: 0;
+        // left: 0;
+        width: 100%;
         left: 0;
-        width: 50px;
+        right: 0;
         height: 50px;
         z-index: 3;
 
+        &.Left {
+            // left: 0;
+        }
+
+        &.Right {
+            // left: 50%;
+            // transform: translateX(-50%);
+        }
+
+        &.Right {
+            // left: auto;
+            // right: 50px;
+        }
+
         .btn {
-            position: absolute;
+            // position: absolute;
             width: 100%;
             height: 100%;
             border-radius: 0;
@@ -115,6 +131,7 @@
 .panel-right {
     width: 300px;
     height: calc(100vh - 0px);
+    overflow-y: auto;
     flex-shrink: 0;
 }
 
